k3s/apps/flare-solverr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  labels:
    app: flaresolverr
  annotations:
    reloader.stakater.com/auto: 'true'
    argocd.argoproj.io/sync-wave: '2'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.4.6
          ports:
            - name: http
              containerPort: 80
