k3s/apps/flare-solverr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  annotations:
    argocd.argoproj.io/sync-wave: '3'
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: flaresolverr
