k3s/apps/flare-solverr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    argocd.argoproj.io/sync-wave: '4'
spec:
  tls:
    - hosts:
        - '*.local.lttviet.com'
  rules:
    - host: flaresolverr.local.lttviet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr
                port:
                  number: 80
